# vs-cbf

./: README.md
cafe_obs_model/: cafe_obs.yaml  map.pgm  map.yaml
cafe_obs_model/cafe/: model.sdf
data_processor/: CMakeLists.txt  package.xml
data_processor/src/: line_obstacles_to_point_cloud.cpp  navigation_metrics_logger_node.cpp  obstacle_ellipses_node.cpp  tracked_group_publisher.cpp  tracked_person_publisher.cpp
evaluation/: dwb_evaluate.sh  mpc_cbf_evaluate.sh  mppi_cbf_evaluate.sh  mppi_evaluate.sh  teb_evaluate.sh
mpc_cbf_controller/: CMakeLists.txt  README.md  package.xml  plugin.xml
mpc_cbf_controller/include/nav2_mpc_cbf_controller/: mpc_cbf_controller.hpp
mpc_cbf_controller/scripts/: mpc_cbf_optimizer.py
mpc_cbf_controller/src/: mpc_cbf_controller.cpp
mpc_cbf_controller/srv/: MpcCbfOptimize.srv
mppi_sacbf_controller/: CMakeLists.txt  critics_sacbf.xml  mppic_sacbf.xml  package.xml
mppi_sacbf_controller/benchmark/: CMakeLists.txt  controller_benchmark.cpp  optimizer_benchmark.cpp
mppi_sacbf_controller/include/nav2_mppi_sacbf_controller/: controller.hpp  critic_data.hpp  critic_function.hpp  critic_manager.hpp  motion_models.hpp  optimizer.hpp
mppi_sacbf_controller/include/nav2_mppi_sacbf_controller/critics/: constraint_critic.hpp  cost_critic.hpp  goal_angle_critic.hpp  goal_critic.hpp  obstacles_critic.hpp  path_align_critic.hpp  path_align_legacy_critic.hpp  path_angle_critic.hpp  path_follow_critic.hpp  prefer_forward_critic.hpp  socialcbf_critic.hpp  twirling_critic.hpp  velocity_deadband_critic.hpp
mppi_sacbf_controller/include/nav2_mppi_sacbf_controller/models/: constraints.hpp  control_sequence.hpp  optimizer_settings.hpp  path.hpp  state.hpp  trajectories.hpp
mppi_sacbf_controller/include/nav2_mppi_sacbf_controller/tools/: noise_generator.hpp  parameters_handler.hpp  path_handler.hpp  trajectory_visualizer.hpp  utils.hpp
mppi_sacbf_controller/src/: controller.cpp  critic_manager.cpp  noise_generator.cpp  optimizer.cpp  parameters_handler.cpp  path_handler.cpp  trajectory_visualizer.cpp
mppi_sacbf_controller/src/critics/: constraint_critic.cpp  cost_critic.cpp  goal_angle_critic.cpp  goal_critic.cpp  obstacles_critic.cpp  path_align_critic.cpp  path_align_legacy_critic.cpp  path_angle_critic.cpp  path_follow_critic.cpp  prefer_forward_critic.cpp  socialcbf_critic.cpp  twirling_critic.cpp  velocity_deadband_critic.cpp
mppi_sacbf_controller/test/: CMakeLists.txt  controller_state_transition_test.cpp  critic_manager_test.cpp  critics_tests.cpp  models_test.cpp  motion_model_tests.cpp  noise_generator_test.cpp  optimizer_smoke_test.cpp  optimizer_unit_tests.cpp  parameter_handler_test.cpp  path_handler_test.cpp  trajectory_visualizer_tests.cpp  utils_test.cpp
mppi_sacbf_controller/test/utils/: factory.hpp
obs_param/src/: obs_kf.cpp
pedsim_ros/: README.md
pedsim_ros/pedsim_gazebo_plugin/launch/: gazebo_tb3_house_demo_launch.py  robot_test_launch.py  tb3_test_launch.py
pedsim_ros/pedsim_gazebo_plugin/scripts/: spawn_pedsim_agents.py
pedsim_ros/pedsim_gazebo_plugin/worlds/: cafe.world  office_env_large.world  office_small.world  scene4.world  social_contexts.world  turtlebot3_house.world
pedsim_ros/pedsim_msgs/msg/: AgentState.msg
pedsim_ros/pedsim_rviz_plugin/src/visuals/: person_visual.cpp
pedsim_ros/pedsim_simulator/config/: params.yaml
pedsim_ros/pedsim_simulator/include/pedsim_simulator/: scene.hpp
pedsim_ros/pedsim_simulator/include/pedsim_simulator/element/: agentcluster.hpp
pedsim_ros/pedsim_simulator/scenarios/: cafe1.xml  cafe2.xml  office-cubicles.xml  office_env_large.xml  office_small.xml  scene4.xml  small_airport.xml  small_airport_backup.xml  social_contexts.xml  turtlebot3_autorace_2020.xml  turtlebot3_dqn_stage1.xml  turtlebot3_house.xml
pedsim_ros/pedsim_simulator/src/: scenarioreader.cpp  simulator.cpp
pedsim_ros/pedsim_simulator/src/element/: agentcluster.cpp
pedsim_ros/pedsim_visualizer/src/: sim_visualizer.cpp
rur_ws/rur_detailed_description/: CMakeLists.txt  package.xml
rur_ws/rur_detailed_description/gazebo/: rur_detailed_plugins.gazebo
rur_ws/rur_detailed_description/launch/: controller.launch.py  controller.yaml  gazebo.launch.py  robot_state_publisher.launch.py  spawn_robot.launch.py
rur_ws/rur_detailed_description/urdf/: rur_detailed.xacro
rur_ws/rur_navigation2/: CMakeLists.txt  package.xml
rur_ws/rur_navigation2/launch/: navigation2.launch.py  navigation2_mpc_cbf.launch.py  navigation2_mppi.launch.py  navigation2_mppi_cbf.launch.py  navigation2_teb.launch.py
rur_ws/rur_navigation2/map/: cafe_obs.pgm  map.pgm  map.yaml  office_small.pgm  office_small.yaml
rur_ws/rur_navigation2/param/: rur.yaml  rur_mpc.yaml  rur_teb.yaml
rur_ws/rur_navigation2/param/humble/: rur.yaml  rur_mpc_cbf.yaml  rur_mppi.yaml  rur_mppi_cbf.yaml  rur_teb.yaml
rur_ws/rur_navigation2/rviz/: navigation2.rviz  obs_navigation2.rviz  rur_navigation2.rviz
rur_ws/rur_navigation2/scripts/: goal_publisher.py  initial_pose_publisher.py
tools/teb_local_planner/teb_local_planner/include/teb_local_planner/: teb_config.h
tools/teb_local_planner/teb_local_planner/params/: teb_params.yaml
