<?xml version="1.0"?>
<package format="3">
  <name>nav2_mpc_cbf_controller</name>
  <version>0.1.0</version>
  <description>MPC+CBF controller plugin for Nav2 with an optimizer service</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Generate + use the .srv in THIS package -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Runtime/build deps -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Python node uses rclpy + CasADi (CasADi via pip) -->
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- pluginlib manifest -->
    <pluginlib plugin="${prefix}/plugin.xml"/>
  </export>
</package>
